Corrected spacing

--- a/style.css
+++ b/style.css
@@ -24,7 +24,8 @@
 .ss_green_bullets li {
 
 	background: url(images/green_dot_20px.svg) no-repeat left top;
-	height: 40px;
-	padding-left:10px;
-	padding-top:3px;
+	height: 35px;
+	padding-left:30px;
+	padding-top:0.3em;
+	line-height: 1em;
 }
